# smile_guy

./: CMakeLists.txt  main.cpp  vcpkg.json
